[gd_scene load_steps=11 format=3 uid="uid://bad5q3rq6bo45"]

[ext_resource type="Script" path="res://LevelParts/level.gd" id="1_1lx5l"]
[ext_resource type="PackedScene" uid="uid://cu6mf3t5i3fpy" path="res://enemy/handEnemy.tscn" id="1_pra85"]
[ext_resource type="Texture2D" uid="uid://bs1i3mkfmd5a6" path="res://img/1Y8zyibaD_8.jpg" id="2_8wvqd"]
[ext_resource type="PackedScene" uid="uid://70hc0fuje66n" path="res://player/hand.tscn" id="2_u6fx3"]
[ext_resource type="PackedScene" uid="uid://bgvmans6v2bco" path="res://LevelParts/randomCard.tscn" id="4_55fvd"]
[ext_resource type="PackedScene" uid="uid://c5e6riwnkh2ap" path="res://player/carta.tscn" id="6_4htcp"]
[ext_resource type="PackedScene" uid="uid://thd0d3hktn3w" path="res://player/cardTexture.tscn" id="6_ery4q"]
[ext_resource type="Texture2D" uid="uid://d2817ccmhqik6" path="res://img/new_atlas_texture.tres" id="7_etu5q"]
[ext_resource type="Script" path="res://LevelParts/CameraMove.gd" id="9_k7esh"]
[ext_resource type="AudioStream" uid="uid://c0fpntfav3trr" path="res://audio/click4.wav" id="9_yodrh"]

[node name="Level" type="Node2D"]
position = Vector2(-2, 2)
script = ExtResource("1_1lx5l")

[node name="1y8ZyibaD8" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.317647)
position = Vector2(388, 673)
scale = Vector2(1.06667, 1.05313)
texture = ExtResource("2_8wvqd")

[node name="HandEnemy" parent="." node_paths=PackedStringArray("player") instance=ExtResource("1_pra85")]
position = Vector2(68, 478)
player = NodePath("../handProdect")

[node name="handProdect" parent="." node_paths=PackedStringArray("varLevel", "StorageHand") instance=ExtResource("2_u6fx3")]
position = Vector2(66, 703)
varLevel = NodePath("..")
StorageHand = NodePath("../Hand2")
protectVar = true

[node name="RandomCard" parent="." node_paths=PackedStringArray("varLevel") instance=ExtResource("4_55fvd")]
position = Vector2(572, 1035)
varLevel = NodePath("..")

[node name="Hand2" parent="." node_paths=PackedStringArray("varLevel") instance=ExtResource("2_u6fx3")]
position = Vector2(67, 863)
varLevel = NodePath("..")

[node name="Delete" parent="." node_paths=PackedStringArray("varLevel") instance=ExtResource("6_4htcp")]
position = Vector2(30, 1046)
varLevel = NodePath("..")
cardDelete = true

[node name="Sprite2D" type="Sprite2D" parent="Delete"]
position = Vector2(82, 83)
scale = Vector2(6.75, 0.999998)
texture = ExtResource("7_etu5q")

[node name="Label2" type="Label" parent="Delete"]
offset_left = 25.0
offset_top = 52.0
offset_right = 142.0
offset_bottom = 75.0
text = "Удалить карту"

[node name="CardTexture" parent="." instance=ExtResource("6_ery4q")]
visible = false
z_index = 5
scale = Vector2(1.25, 1.25)

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.717647, 0, 0.121569, 1)
offset_left = 68.0
offset_top = 680.0
offset_right = 705.0
offset_bottom = 707.0
value = 100.0
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 387.0
offset_top = 1046.0
offset_right = 564.0
offset_bottom = 1210.0
text = "Завершить ход"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
offset_left = 209.0
offset_top = 1045.0
offset_right = 386.0
offset_bottom = 1209.0
text = "Рюкзак"
metadata/_edit_use_anchors_ = true

[node name="AudioStepButton" type="AudioStreamPlayer2D" parent="."]
position = Vector2(4, 209)
stream = ExtResource("9_yodrh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(387, 613)
zoom = Vector2(1, 0.835)
script = ExtResource("9_k7esh")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
